chore: checkpoint current workspace changes